manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aws-auth-validator
  namespace: kube-system
  labels:
    app: aws-auth-validator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aws-auth-validator
  template:
    metadata:
      labels:
        app: aws-auth-validator
    spec:
      # SA corresponds to the SA created by the IRSA setup script.
      serviceAccountName: aws-auth-validator
      containers:
        - name: aws-auth-validator
          image: public.ecr.aws/t4h9q3m4/webhook:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: aws-auth-validator-certs
              mountPath: /etc/webhook/certs
              readOnly: true
      volumes:
        - name: aws-auth-validator-certs
          secret:
            secretName: aws-auth-validator-certs
---
apiVersion: v1
kind: Service
metadata:
  name: aws-auth-validator-svc
  namespace: kube-system
  labels:
    app: aws-auth-validator
spec:
  ports:
  - port: 443
    targetPort: 443
  selector:
    app: aws-auth-validator           
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: aws-auth-validator
webhooks:
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUR1akNDQXFLZ0F3SUJBZ0lVSDBFMVFRM0F1UWtUaUUrRlNHM0I1WEJKUDRnd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0ZURVRNQkVHQTFVRUF4TUthM1ZpWlhKdVpYUmxjekFlRncweU1qQTRNall5TWpFMU1EQmFGdzB5TXpBNApNall5TWpFMU1EQmFNREV4THpBdEJnTlZCQU1USm1GM2N5MWhkWFJvTFhaaGJHbGtZWFJ2Y2kxemRtTXVhM1ZpClpTMXplWE4wWlcwdWMzWmpNSUlCSWpBTkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQXZCaVUKQ3lxRDhRWmYwMU5OTzZQOUorWlJoeTl3cFZqcTIvbjhWN29xQVhxNXU1NlJZSTJhN1IxRE14YUZjMjVUS3Arego0dURUdFEvT2tZZk [...]
    service:
      name: aws-auth-validator-svc
      namespace: kube-system
      path: /validate/configmaps
      port: 443
  failurePolicy: Fail
  matchPolicy: Exact
  # change me. However, will work with the default value
  name: validatingwebhook.test.com
  namespaceSelector:
    matchExpressions:
    - key: name
      operator: In
      values:
      - kube-system
  objectSelector:
    matchLabels:
      name: aws-auth
  rules:
  - apiVersions:
    - '*'
    apiGroups: ["*"]
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources: ["configmaps"]
    scope: Namespaced
  sideEffects: None
  timeoutSeconds: 30
